# msckf_vio

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  nodelets.xml  package.xml
cmake/: FindSPQR.cmake
config/: camchain-imucam-euroc-noextrinsics.yaml  camchain-imucam-euroc.yaml  camchain-imucam-fla.yaml
include/msckf_vio/: cam_state.h  feature.hpp  image_processor.h  image_processor_nodelet.h  imu_state.h  math_utils.hpp  msckf_vio.h  msckf_vio_nodelet.h  utils.h
launch/: image_processor_euroc.launch  image_processor_fla.launch  msckf_vio_euroc.launch  msckf_vio_euroc_noextrinsics.launch  msckf_vio_fla.launch  reset.launch
msg/: CameraMeasurement.msg  FeatureMeasurement.msg  TrackingInfo.msg
rviz/: rviz_euroc_config.rviz  rviz_fla_config.rviz
src/: image_processor.cpp  image_processor_nodelet.cpp  msckf_vio.cpp  msckf_vio_nodelet.cpp  utils.cpp
test/: feature_initialization_test.cpp  math_utils_test.cpp
